--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 
     <div class="mobile-overlay" id="mobileOverlay"></div>
 
-    <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+    <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order"
         target="_blank" rel="noopener" class="whatsapp-float" aria-label="Chat on WhatsApp">
         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
             <path
@@ -79,7 +79,7 @@
                 <a href="about.html">About</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="contact.html">Contact</a>
-                <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+                <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order"
                     target="_blank" class="nav-order-btn">Order Now</a>
             </div>
             <button class="hamburger" id="hamburger" aria-label="Toggle menu">
@@ -90,8 +90,8 @@
 
     <!-- PAGE HERO -->
     <section class="page-hero">
-        <span class="floating-fruit" style="top:15%;left:8%;">🍓</span>
-        <span class="floating-fruit" style="bottom:20%;right:12%;">🫐</span>
+        <span class="floating-fruit" style="top:15%;left:8%;"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2a7 7 0 0 1 7 7c0 5-7 13-7 13S5 14 5 9a7 7 0 0 1 7-7z"/></svg></span>
+        <span class="floating-fruit" style="bottom:20%;right:12%;"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="6"/><circle cx="12" cy="12" r="2"/></svg></span>
         <div class="container">
             <p class="breadcrumb reveal"><a href="index.html">Home</a> / About</p>
             <h1 class="reveal">About Us</h1>
@@ -136,7 +136,7 @@
 
             <div class="value-props" style="max-width: 800px; margin: 0 auto;">
                 <div class="value-prop reveal">
-                    <span class="prop-icon">🌿</span>
+                    <span class="prop-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M11 20A7 7 0 0 1 9.8 6.9C15.5 4.9 17 3.5 17 3.5s0 6.5-5.7 8.5"/><path d="M11.2 14.5a7 7 0 0 0 6.8-6.2"/></svg></span>
                     <div>
                         <h4>100% Fresh Ingredients</h4>
                         <p>No preservatives, no artificial flavors. Only real fruits and premium ingredients in every
@@ -144,7 +144,7 @@
                     </div>
                 </div>
                 <div class="value-prop reveal">
-                    <span class="prop-icon">🏆</span>
+                    <span class="prop-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"/><path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"/><path d="M4 22h16"/><path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"/><path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"/><path d="M18 2H6v7a6 6 0 0 0 12 0V2Z"/></svg></span>
                     <div>
                         <h4>Premium Quality</h4>
                         <p>We source the finest fruits and superfoods to create drinks that taste as good as they look.
@@ -152,7 +152,7 @@
                     </div>
                 </div>
                 <div class="value-prop reveal">
-                    <span class="prop-icon">🎨</span>
+                    <span class="prop-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="13.5" cy="6.5" r=".5"/><circle cx="17.5" cy="10.5" r=".5"/><circle cx="8.5" cy="7.5" r=".5"/><circle cx="6.5" cy="12.5" r=".5"/><path d="M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10c.926 0 1.648-.746 1.648-1.688 0-.437-.18-.835-.437-1.125-.29-.289-.438-.652-.438-1.125a1.64 1.64 0 0 1 1.668-1.668h1.996c3.051 0 5.555-2.503 5.555-5.554C21.965 6.012 17.461 2 12 2z"/></svg></span>
                     <div>
                         <h4>Artfully Crafted</h4>
                         <p>Each bowl and drink is beautifully presented with real fruit toppings — a feast for the eyes.
@@ -160,7 +160,7 @@
                     </div>
                 </div>
                 <div class="value-prop reveal">
-                    <span class="prop-icon">💚</span>
+                    <span class="prop-icon"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"/></svg></span>
                     <div>
                         <h4>Health First</h4>
                         <p>Every recipe is designed with nutrition in mind. Fuel your body with the goodness of nature.
@@ -232,15 +232,15 @@
                 <div>
                     <h4>Contact Us</h4>
                     <div class="footer-links">
-                        <a href="contact.html">📍 Trichy, Tamil Nadu</a>
-                        <a href="tel:+917598465053">📞 +91 XXXXXXXXXX</a>
-                        <a href="https://wa.me/917598465053" target="_blank">💬 WhatsApp</a>
-                        <a href="contact.html">🕘 9:00 AM – 10:00 PM</a>
+                        <a href="contact.html"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon-inline"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"/><circle cx="12" cy="10" r="3"/></svg> Trichy, Tamil Nadu</a>
+                        <a href="tel:+917867998656"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon-inline"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72c.127.96.361 1.903.7 2.81a2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0 1 22 16.92z"/></svg> +91 XXXXXXXXXX</a>
+                        <a href="https://wa.me/917867998656" target="_blank"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon-inline"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/></svg> WhatsApp</a>
+                        <a href="contact.html"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon-inline"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg> 9:00 AM – 10:00 PM</a>
                     </div>
                     <div class="footer-social" style="margin-top: var(--space-md);">
-                        <a href="#" aria-label="Instagram">📸</a>
-                        <a href="#" aria-label="Facebook">📘</a>
-                        <a href="#" aria-label="YouTube">▶️</a>
+                        <a href="#" aria-label="Instagram"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a>
+                        <a href="#" aria-label="Facebook"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg></a>
+                        <a href="#" aria-label="YouTube"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M2.5 17a24.12 24.12 0 0 1 0-10 2 2 0 0 1 1.4-1.4 49.56 49.56 0 0 1 16.2 0A2 2 0 0 1 21.5 7a24.12 24.12 0 0 1 0 10 2 2 0 0 1-1.4 1.4 49.55 49.55 0 0 1-16.2 0A2 2 0 0 1 2.5 17"/><path d="m10 15 5-3-5-3z"/></svg></a>
                     </div>
                 </div>
             </div>
