--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     "description": "Premium fresh juice shop in Trichy with superfood bowls, smoothies, and healthy drinks.",
     "image": "/images/logo.png",
     "url": "https://fruithousentrichy.com",
-    "telephone": "+917598465053",
+    "telephone": "+917867998656",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "Trichy",
@@ -73,7 +73,7 @@
 
     <div class="mobile-overlay" id="mobileOverlay"></div>
 
-    <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+    <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order"
         target="_blank" rel="noopener" class="whatsapp-float" aria-label="Chat on WhatsApp">
         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
             <path
@@ -94,7 +94,7 @@
                 <a href="about.html">About</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="contact.html">Contact</a>
-                <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+                <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order"
                     target="_blank" class="nav-order-btn">Order Now</a>
             </div>
             <button class="hamburger" id="hamburger" aria-label="Toggle menu">
@@ -105,8 +105,16 @@
 
     <!-- PAGE HERO -->
     <section class="page-hero">
-        <span class="floating-fruit" style="top:20%;left:6%;">📍</span>
-        <span class="floating-fruit" style="top:30%;right:12%;">📞</span>
+        <span class="floating-fruit" style="top:20%;left:6%;"><svg width="20" height="20" viewBox="0 0 24 24"
+                fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
+                <circle cx="12" cy="10" r="3" />
+            </svg></span>
+        <span class="floating-fruit" style="top:30%;right:12%;"><svg width="20" height="20" viewBox="0 0 24 24"
+                fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <path
+                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72c.127.96.361 1.903.7 2.81a2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0 1 22 16.92z" />
+            </svg></span>
         <div class="container">
             <p class="breadcrumb reveal"><a href="index.html">Home</a> / Contact</p>
             <h1 class="reveal">Contact Us</h1>
@@ -120,7 +128,11 @@
             <div class="contact-grid">
                 <div class="contact-info">
                     <div class="contact-card reveal">
-                        <span class="card-icon">📍</span>
+                        <span class="card-icon"><svg width="20" height="20" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
+                                <circle cx="12" cy="10" r="3" />
+                            </svg></span>
                         <div>
                             <h4>Address</h4>
                             <p>Trichy, Tamil Nadu, India</p>
@@ -128,24 +140,35 @@
                     </div>
 
                     <div class="contact-card reveal">
-                        <span class="card-icon">📞</span>
+                        <span class="card-icon"><svg width="20" height="20" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <path
+                                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72c.127.96.361 1.903.7 2.81a2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0 1 22 16.92z" />
+                            </svg></span>
                         <div>
                             <h4>Phone</h4>
-                            <a href="tel:+917598465053">+91 XXXXXXXXXX</a>
+                            <a href="tel:+917867998656">+91 XXXXXXXXXX</a>
                         </div>
                     </div>
 
                     <div class="contact-card reveal">
-                        <span class="card-icon">💬</span>
+                        <span class="card-icon"><svg width="20" height="20" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z" />
+                            </svg></span>
                         <div>
                             <h4>WhatsApp</h4>
-                            <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!" target="_blank"
+                            <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!" target="_blank"
                                 rel="noopener">Message us on WhatsApp</a>
                         </div>
                     </div>
 
                     <div class="contact-card reveal">
-                        <span class="card-icon">🕘</span>
+                        <span class="card-icon"><svg width="20" height="20" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="12" r="10" />
+                                <polyline points="12 6 12 12 16 14" />
+                            </svg></span>
                         <div>
                             <h4>Opening Hours</h4>
                             <p>Every day: 9:00 AM – 10:00 PM</p>
@@ -171,9 +194,12 @@
             <h2 class="reveal">Ready to Order?</h2>
             <p class="reveal" style="margin: var(--space-md) auto var(--space-xl);">Skip the queue! Order your favorite
                 juices and bowls directly on WhatsApp.</p>
-            <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+            <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order"
                 target="_blank" class="btn btn-whatsapp reveal" style="font-size: 1.05rem; padding: 16px 40px;">
-                💬 Order on WhatsApp
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round" style="vertical-align:middle;margin-right:6px">
+                    <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z" />
+                </svg>Order on WhatsApp
             </a>
         </div>
     </section>
@@ -213,15 +239,47 @@
                 <div>
                     <h4>Contact Us</h4>
                     <div class="footer-links">
-                        <a href="contact.html">📍 Trichy, Tamil Nadu</a>
-                        <a href="tel:+917598465053">📞 +91 XXXXXXXXXX</a>
-                        <a href="https://wa.me/917598465053" target="_blank">💬 WhatsApp</a>
-                        <a href="contact.html">🕘 9:00 AM – 10:00 PM</a>
+                        <a href="contact.html"><svg width="14" height="14" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                                class="icon-inline">
+                                <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
+                                <circle cx="12" cy="10" r="3" />
+                            </svg> Trichy, Tamil Nadu</a>
+                        <a href="tel:+917867998656"><svg width="14" height="14" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                                class="icon-inline">
+                                <path
+                                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72c.127.96.361 1.903.7 2.81a2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0 1 22 16.92z" />
+                            </svg> +91 XXXXXXXXXX</a>
+                        <a href="https://wa.me/917867998656" target="_blank"><svg width="14" height="14"
+                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
+                                stroke-linecap="round" stroke-linejoin="round" class="icon-inline">
+                                <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z" />
+                            </svg> WhatsApp</a>
+                        <a href="contact.html"><svg width="14" height="14" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                                class="icon-inline">
+                                <circle cx="12" cy="12" r="10" />
+                                <polyline points="12 6 12 12 16 14" />
+                            </svg> 9:00 AM – 10:00 PM</a>
                     </div>
                     <div class="footer-social" style="margin-top: var(--space-md);">
-                        <a href="#" aria-label="Instagram">📸</a>
-                        <a href="#" aria-label="Facebook">📘</a>
-                        <a href="#" aria-label="YouTube">▶️</a>
+                        <a href="#" aria-label="Instagram"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
+                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+                                <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
+                            </svg></a>
+                        <a href="#" aria-label="Facebook"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
+                            </svg></a>
+                        <a href="#" aria-label="YouTube"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <path
+                                    d="M2.5 17a24.12 24.12 0 0 1 0-10 2 2 0 0 1 1.4-1.4 49.56 49.56 0 0 1 16.2 0A2 2 0 0 1 21.5 7a24.12 24.12 0 0 1 0 10 2 2 0 0 1-1.4 1.4 49.55 49.55 0 0 1-16.2 0A2 2 0 0 1 2.5 17" />
+                                <path d="m10 15 5-3-5-3z" />
+                            </svg></a>
                     </div>
                 </div>
             </div>
