--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
 
     <div class="mobile-overlay" id="mobileOverlay"></div>
 
-    <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+    <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order"
         target="_blank" rel="noopener" class="whatsapp-float" aria-label="Chat on WhatsApp">
         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
             <path
@@ -62,7 +62,7 @@
                 <a href="about.html">About</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="contact.html">Contact</a>
-                <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+                <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order"
                     target="_blank" class="nav-order-btn">Order Now</a>
             </div>
             <button class="hamburger" id="hamburger" aria-label="Toggle menu">
@@ -73,8 +73,8 @@
 
     <!-- PAGE HERO -->
     <section class="page-hero">
-        <span class="floating-fruit" style="top:18%;right:10%;">🥭</span>
-        <span class="floating-fruit" style="bottom:25%;left:8%;">🍇</span>
+        <span class="floating-fruit" style="top:18%;right:10%;"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M7 21a4.38 4.38 0 0 1-1.5-3.5C5.5 15 7 13 7 13s1.5 2 1.5 4.5A4.38 4.38 0 0 1 7 21z"/></svg></span>
+        <span class="floating-fruit" style="bottom:25%;left:8%;"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg></span>
         <div class="container">
             <p class="breadcrumb reveal"><a href="index.html">Home</a> / Gallery</p>
             <h1 class="reveal">Our Gallery</h1>
@@ -177,9 +177,9 @@
             <h2 class="reveal">Craving Something Fresh?</h2>
             <p class="reveal" style="margin: var(--space-md) auto var(--space-xl);">Order your favorite juices and bowls
                 on WhatsApp right now!</p>
-            <a href="menu.html" class="btn btn-primary reveal" style="margin-right: var(--space-sm);">🍹 View Menu</a>
-            <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
-                target="_blank" class="btn btn-whatsapp reveal">💬 Order Now</a>
+            <a href="menu.html" class="btn btn-primary reveal" style="margin-right: var(--space-sm);"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" style="vertical-align:middle;margin-right:6px"><path d="M3 2l2.4 2.4M7 8l-4.6 4.6a2 2 0 0 0 0 2.8l5.2 5.2a2 2 0 0 0 2.8 0L15 16"/><path d="m14 4 6 6-8 8"/><path d="m21.7 5.3-1.4-1.4a1 1 0 0 0-1.4 0L17 5.7"/></svg>View Menu</a>
+            <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order"
+                target="_blank" class="btn btn-whatsapp reveal"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" style="vertical-align:middle;margin-right:4px"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/></svg>Order Now</a>
         </div>
     </section>
 
@@ -218,15 +218,15 @@
                 <div>
                     <h4>Contact Us</h4>
                     <div class="footer-links">
-                        <a href="contact.html">📍 Trichy, Tamil Nadu</a>
-                        <a href="tel:+917598465053">📞 +91 XXXXXXXXXX</a>
-                        <a href="https://wa.me/917598465053" target="_blank">💬 WhatsApp</a>
-                        <a href="contact.html">🕘 9:00 AM – 10:00 PM</a>
+                        <a href="contact.html"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon-inline"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"/><circle cx="12" cy="10" r="3"/></svg> Trichy, Tamil Nadu</a>
+                        <a href="tel:+917867998656"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon-inline"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72c.127.96.361 1.903.7 2.81a2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0 1 22 16.92z"/></svg> +91 XXXXXXXXXX</a>
+                        <a href="https://wa.me/917867998656" target="_blank"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon-inline"><path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"/></svg> WhatsApp</a>
+                        <a href="contact.html"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon-inline"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg> 9:00 AM – 10:00 PM</a>
                     </div>
                     <div class="footer-social" style="margin-top: var(--space-md);">
-                        <a href="#" aria-label="Instagram">📸</a>
-                        <a href="#" aria-label="Facebook">📘</a>
-                        <a href="#" aria-label="YouTube">▶️</a>
+                        <a href="#" aria-label="Instagram"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect width="20" height="20" x="2" y="2" rx="5" ry="5"/><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" x2="17.51" y1="6.5" y2="6.5"/></svg></a>
+                        <a href="#" aria-label="Facebook"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg></a>
+                        <a href="#" aria-label="YouTube"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M2.5 17a24.12 24.12 0 0 1 0-10 2 2 0 0 1 1.4-1.4 49.56 49.56 0 0 1 16.2 0A2 2 0 0 1 21.5 7a24.12 24.12 0 0 1 0 10 2 2 0 0 1-1.4 1.4 49.55 49.55 0 0 1-16.2 0A2 2 0 0 1 2.5 17"/><path d="m10 15 5-3-5-3z"/></svg></a>
                     </div>
                 </div>
             </div>
