--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     "description": "Premium fresh juice shop in Trichy offering superfood bowls, smoothies, and healthy drinks crafted with 100% real fruit toppings.",
     "image": "/images/logo.png",
     "url": "https://fruithousentrichy.com",
-    "telephone": "+917598465053",
+    "telephone": "+917867998656",
     "address": {
       "@type": "PostalAddress",
       "addressLocality": "Trichy",
@@ -119,7 +119,7 @@
     <div class="mobile-overlay" id="mobileOverlay"></div>
 
     <!-- Floating WhatsApp -->
-    <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+    <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order"
         target="_blank" rel="noopener" class="whatsapp-float" aria-label="Chat on WhatsApp" id="whatsappFloat">
         <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
             <path
@@ -141,7 +141,7 @@
                 <a href="about.html">About</a>
                 <a href="gallery.html">Gallery</a>
                 <a href="contact.html">Contact</a>
-                <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
+                <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order"
                     target="_blank" class="nav-order-btn">Order Now</a>
             </div>
 
@@ -154,12 +154,33 @@
     <!-- ═══════════ HERO ═══════════ -->
     <section class="hero" id="hero">
         <!-- Floating Fruits (decorative) -->
-        <span class="floating-fruit" style="top:10%;left:5%;">🍊</span>
-        <span class="floating-fruit" style="top:20%;right:8%;">🥝</span>
-        <span class="floating-fruit" style="bottom:25%;left:12%;">🍓</span>
-        <span class="floating-fruit" style="bottom:15%;right:15%;">🫐</span>
-        <span class="floating-fruit" style="top:40%;left:85%;">🥭</span>
-        <span class="floating-fruit" style="top:60%;right:90%;">🍇</span>
+        <span class="floating-fruit" style="top:10%;left:5%;"><svg width="18" height="18" viewBox="0 0 24 24"
+                fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="10" />
+                <path d="M8 12a4 4 0 0 0 8 0" />
+            </svg></span>
+        <span class="floating-fruit" style="top:20%;right:8%;"><svg width="18" height="18" viewBox="0 0 24 24"
+                fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M11 20A7 7 0 0 1 9.8 6.9C15.5 4.9 17 3.5 17 3.5s0 6.5-5.7 8.5" />
+                <path d="M11.2 14.5a7 7 0 0 0 6.8-6.2" />
+            </svg></span>
+        <span class="floating-fruit" style="bottom:25%;left:12%;"><svg width="18" height="18" viewBox="0 0 24 24"
+                fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 2a7 7 0 0 1 7 7c0 5-7 13-7 13S5 14 5 9a7 7 0 0 1 7-7z" />
+            </svg></span>
+        <span class="floating-fruit" style="bottom:15%;right:15%;"><svg width="18" height="18" viewBox="0 0 24 24"
+                fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="6" />
+                <circle cx="12" cy="12" r="2" />
+            </svg></span>
+        <span class="floating-fruit" style="top:40%;left:85%;"><svg width="18" height="18" viewBox="0 0 24 24"
+                fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M7 21a4.38 4.38 0 0 1-1.5-3.5C5.5 15 7 13 7 13s1.5 2 1.5 4.5A4.38 4.38 0 0 1 7 21z" />
+            </svg></span>
+        <span class="floating-fruit" style="top:60%;right:90%;"><svg width="18" height="18" viewBox="0 0 24 24"
+                fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+            </svg></span>
 
         <div class="hero-parallax-bg" data-parallax="0.4">
             <img src="/images/hero/hero1.png" alt="Premium fresh fruit juices at Fruit House Trichy" loading="eager" />
@@ -182,9 +203,19 @@
             </div>
 
             <div class="hero-cta reveal">
-                <a href="menu.html" class="btn btn-primary">🍹 View Menu</a>
-                <a href="https://wa.me/917598465053?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order%20🍹"
-                    target="_blank" class="btn btn-whatsapp">💬 Order Now</a>
+                <a href="menu.html" class="btn btn-primary"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                        style="vertical-align:middle;margin-right:6px">
+                        <path d="M3 2l2.4 2.4M7 8l-4.6 4.6a2 2 0 0 0 0 2.8l5.2 5.2a2 2 0 0 0 2.8 0L15 16" />
+                        <path d="m14 4 6 6-8 8" />
+                        <path d="m21.7 5.3-1.4-1.4a1 1 0 0 0-1.4 0L17 5.7" />
+                    </svg>View Menu</a>
+                <a href="https://wa.me/917867998656?text=Hi%20Fruit%20House!%20I%20would%20like%20to%20place%20an%20order"
+                    target="_blank" class="btn btn-whatsapp"><svg width="16" height="16" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                        style="vertical-align:middle;margin-right:6px">
+                        <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z" />
+                    </svg>Order Now</a>
             </div>
         </div>
     </section>
@@ -202,22 +233,44 @@
 
             <div class="featured-grid stagger">
                 <a href="menu.html" class="featured-card reveal">
-                    <span class="card-emoji">🍹</span>
+                    <span class="card-emoji"><svg width="32" height="32" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M17 8h1a4 4 0 1 1 0 8h-1" />
+                            <path d="M3 8h14v9a4 4 0 0 1-4 4H7a4 4 0 0 1-4-4Z" />
+                            <line x1="6" x2="6" y1="2" y2="4" />
+                            <line x1="10" x2="10" y1="2" y2="4" />
+                            <line x1="14" x2="14" y1="2" y2="4" />
+                        </svg></span>
                     <h3>Special Combos</h3>
                     <p>Quick picks starting ₹40</p>
                 </a>
                 <a href="menu.html" class="featured-card reveal">
-                    <span class="card-emoji">🥣</span>
+                    <span class="card-emoji"><svg width="32" height="32" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M12 22a2 2 0 0 1-2-2h4a2 2 0 0 1-2 2z" />
+                            <path d="M4 11a8 8 0 0 1 16 0c0 2.5-1 5-2 7H6c-1-2-2-4.5-2-7z" />
+                        </svg></span>
                     <h3>Superfood Bowls</h3>
                     <p>10 premium varieties</p>
                 </a>
                 <a href="menu.html" class="featured-card reveal">
-                    <span class="card-emoji">🧊</span>
+                    <span class="card-emoji"><svg width="32" height="32" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M2 12h20" />
+                            <path d="M20 12v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-8" />
+                            <path d="m4 8 2-4h12l2 4" />
+                            <line x1="12" x2="12" y1="4" y2="8" />
+                        </svg></span>
                     <h3>Coolers</h3>
                     <p>Beat the heat fresh</p>
                 </a>
                 <a href="menu.html" class="featured-card reveal">
-                    <span class="card-emoji">🥛</span>
+                    <span class="card-emoji"><svg width="32" height="32" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M8 2h8l4 10H4L8 2z" />
+                            <path d="M12 12v6" />
+                            <path d="M6 22h12" />
+                        </svg></span>
                     <h3>Nut Milk</h3>
                     <p>Almond & Cashew blends</p>
                 </a>
@@ -385,15 +438,47 @@
                 <div>
                     <h4>Contact Us</h4>
                     <div class="footer-links">
-                        <a href="contact.html">📍 Trichy, Tamil Nadu</a>
-                        <a href="tel:+917598465053">📞 +91 XXXXXXXXXX</a>
-                        <a href="https://wa.me/917598465053" target="_blank">💬 WhatsApp</a>
-                        <a href="contact.html">🕘 9:00 AM – 10:00 PM</a>
+                        <a href="contact.html"><svg width="14" height="14" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                                class="icon-inline">
+                                <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
+                                <circle cx="12" cy="10" r="3" />
+                            </svg> Trichy, Tamil Nadu</a>
+                        <a href="tel:+917867998656"><svg width="14" height="14" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                                class="icon-inline">
+                                <path
+                                    d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72c.127.96.361 1.903.7 2.81a2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0 1 22 16.92z" />
+                            </svg> +91 XXXXXXXXXX</a>
+                        <a href="https://wa.me/917867998656" target="_blank"><svg width="14" height="14"
+                                viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"
+                                stroke-linecap="round" stroke-linejoin="round" class="icon-inline">
+                                <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z" />
+                            </svg> WhatsApp</a>
+                        <a href="contact.html"><svg width="14" height="14" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                                class="icon-inline">
+                                <circle cx="12" cy="12" r="10" />
+                                <polyline points="12 6 12 12 16 14" />
+                            </svg> 9:00 AM – 10:00 PM</a>
                     </div>
                     <div class="footer-social" style="margin-top: var(--space-md);">
-                        <a href="#" aria-label="Instagram">📸</a>
-                        <a href="#" aria-label="Facebook">📘</a>
-                        <a href="#" aria-label="YouTube">▶️</a>
+                        <a href="#" aria-label="Instagram"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <rect width="20" height="20" x="2" y="2" rx="5" ry="5" />
+                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+                                <line x1="17.5" x2="17.51" y1="6.5" y2="6.5" />
+                            </svg></a>
+                        <a href="#" aria-label="Facebook"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
+                            </svg></a>
+                        <a href="#" aria-label="YouTube"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                                <path
+                                    d="M2.5 17a24.12 24.12 0 0 1 0-10 2 2 0 0 1 1.4-1.4 49.56 49.56 0 0 1 16.2 0A2 2 0 0 1 21.5 7a24.12 24.12 0 0 1 0 10 2 2 0 0 1-1.4 1.4 49.55 49.55 0 0 1-16.2 0A2 2 0 0 1 2.5 17" />
+                                <path d="m10 15 5-3-5-3z" />
+                            </svg></a>
                     </div>
                 </div>
             </div>
